src/objects/SecureEmailSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Chevron_KB__c</fullName>
        <label>Chevron_KB</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_of_Allowed_Extensions__c</fullName>
        <label>List of allowed Extensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_Blocked_Extensions__c</fullName>
        <label>List of Blocked Extensions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spectrum_KB__c</fullName>
        <label>Spectrum_KB</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>chevron_url__c</fullName>
        <label>chevron_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>spectrum_url__c</fullName>
        <label>spectrum_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>url_redirection_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>url_redirection_enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Secure Email Setting</label>
</CustomObject>